packages/optimizer/core/src/snapshots/qwik_core__test__should_not_split_member_expression_spreads.snap
---
source: packages/optimizer/core/src/test.rs
expression: output
---
==INPUT==


		import { component$ } from '@qwik.dev/core';
		import { Item } from './item';

		export default component$((props: any) => {
			return (
				<>
					<Item {...props.a} />
					<Item {...props.a} title="x" />
					<div {...props.a} />
					<div {...props.a} title="x" />
					<div title="x" {...props.a} />
				</>
			);
		});

		export const Destructured = component$(({ a }: any) => <div {...a} />);
		
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_Destructured_component_tVojIGTbHGc = /*#__PURE__*/ qrl(()=>import("./test.tsx_Destructured_component_tVojIGTbHGc"), "Destructured_component_tVojIGTbHGc");
const q_test_component_LUXeXe0DQrg = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg");
//
export default /*#__PURE__*/ componentQrl(q_test_component_LUXeXe0DQrg);
export const Destructured = /*#__PURE__*/ componentQrl(q_Destructured_component_tVojIGTbHGc);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;AAIE,6BAAe,2CAUZ;AAEH,OAAO,MAAM,6BAAe,mDAA2C\"}")
============================= test.tsx_Destructured_component_tVojIGTbHGc.js (ENTRY POINT)==

import { _jsxSplit } from "@qwik.dev/core";
//
export const Destructured_component_tVojIGTbHGc = (_rawProps)=>/*#__PURE__*/ _jsxSplit("div", {
        ..._rawProps.a
    }, null, null, 0, "u6_3");


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;kDAgByC,2BAAgB,UAAC;qBAAd,CAAmB\"}")
/*
{
  "origin": "test.tsx",
  "name": "Destructured_component_tVojIGTbHGc",
  "entry": null,
  "displayName": "test.tsx_Destructured_component",
  "hash": "tVojIGTbHGc",
  "canonicalFilename": "test.tsx_Destructured_component_tVojIGTbHGc",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    372,
    402
  ],
  "paramNames": [
    "_rawProps"
  ]
}
*/
============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT)==

import { Item } from "./item";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { _jsxSorted } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
//
export const test_component_LUXeXe0DQrg = (props)=>{
    return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
        /*#__PURE__*/ _jsxSplit(Item, {
            ...props.a
        }, null, null, 0, "u6_0"),
        /*#__PURE__*/ _jsxSplit(Item, {
            ...props.a
        }, {
            title: "x"
        }, null, 0, "u6_1"),
        /*#__PURE__*/ _jsxSplit("div", {
            ...props.a
        }, null, null, 0, null),
        /*#__PURE__*/ _jsxSplit("div", {
            ...props.a
        }, {
            title: "x"
        }, null, 0, null),
        /*#__PURE__*/ _jsxSplit("div", {
            title: "x",
            ...props.a
        }, null, null, 0, null)
    ], 1, "u6_2");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;0CAI4B,CAAC;IAC1B,qBACC;sBACC,UAAC;YAAM,GAAG,MAAM,CAAC;;sBACjB,UAAC;YAAM,GAAG,MAAM,CAAC;;YAAE,OAAM;;sBACzB,UAAC;YAAK,GAAG,MAAM,CAAC;;sBAChB,UAAC;YAAK,GAAG,MAAM,CAAC;;YAAE,OAAM;;sBACxB,UAAC;YAAI,OAAM;YAAK,GAAG,MAAM,CAAC;;;AAG7B\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    111,
    327
  ],
  "paramNames": [
    "props"
  ]
}
*/
== DIAGNOSTICS ==

[]
