packages/optimizer/core/src/snapshots/qwik_core__test__should_not_wrap_fn.snap
---
source: packages/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$, useSignal } from "@qwik.dev/core";
import { A } from "./componentA";

export const Cmp = component$(() => {
	const currentStep = useSignal('STEP_1');
	const currentType = useSignal<'NEXT' | 'PREVIOUS'>('PREVIOUS');

	const getStep = (step: string, type: 'NEXT' | 'PREVIOUS') => {
		return step === 'STEP_1' ? 'STEP_2' : 'STEP_1';
	};

	return (
		<>
			<button onClick$={() => (currentType.value = 'NEXT')}>CLICK</button>
			<A href={getStep(currentStep.value, currentType.value)} />
		</>
	);
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_Cmp_component_4ryKJTOKjWE = /*#__PURE__*/ qrl(()=>import("./test.tsx_Cmp_component_4ryKJTOKjWE"), "Cmp_component_4ryKJTOKjWE");
//
export const Cmp = /*#__PURE__*/ componentQrl(q_Cmp_component_4ryKJTOKjWE);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAIA,OAAO,MAAM,oBAAM,0CAchB\"}")
============================= test.tsx_Cmp_component_4ryKJTOKjWE.js (ENTRY POINT)==

import { A } from "./componentA";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
//
const q_Cmp_component_Fragment_button_q_e_click_veAZ2ow0cnM = /*#__PURE__*/ qrl(()=>import("./test.tsx_Cmp_component_Fragment_button_q_e_click_veAZ2ow0cnM"), "Cmp_component_Fragment_button_q_e_click_veAZ2ow0cnM").m();
//
export const Cmp_component_4ryKJTOKjWE = ()=>{
    const currentStep = useSignal('STEP_1');
    const currentType = useSignal('PREVIOUS');
    const getStep = (step, type)=>{
        return step === 'STEP_1' ? 'STEP_2' : 'STEP_1';
    };
    return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
        /*#__PURE__*/ _jsxSorted("button", {
            "q:p": currentType
        }, {
            "q-e:click": q_Cmp_component_Fragment_button_q_e_click_veAZ2ow0cnM
        }, "CLICK", 7, null),
        /*#__PURE__*/ _jsxSorted(A, {
            href: getStep(currentStep.value, currentType.value)
        }, null, null, 3, "u6_0")
    ], 1, "u6_1");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;yCAI8B;IAC7B,MAAM,cAAc,UAAU;IAC9B,MAAM,cAAc,UAA+B;IAEnD,MAAM,UAAU,CAAC,MAAc;QAC9B,OAAO,SAAS,WAAW,WAAW;IACvC;IAEA,qBACC;sBACC,WAAC;;;YAAO,WAAQ;WAAsC;sBACtD,WAAC;YAAE,MAAM,QAAQ,YAAY,KAAK,EAAE,YAAY,KAAK;;;AAGxD\"}")
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_4ryKJTOKjWE",
  "entry": null,
  "displayName": "test.tsx_Cmp_component",
  "hash": "4ryKJTOKjWE",
  "canonicalFilename": "test.tsx_Cmp_component_4ryKJTOKjWE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    123,
    518
  ]
}
*/
============================= test.tsx_Cmp_component_Fragment_button_q_e_click_veAZ2ow0cnM.js (ENTRY POINT)==

export const Cmp_component_Fragment_button_q_e_click_veAZ2ow0cnM = (_, _1, currentType)=>currentType.value = 'NEXT';


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"mEAcqB,sBAAO,YAAY,KAAK,GAAG\"}")
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_Fragment_button_q_e_click_veAZ2ow0cnM",
  "entry": null,
  "displayName": "test.tsx_Cmp_component_Fragment_button_q_e_click",
  "hash": "veAZ2ow0cnM",
  "canonicalFilename": "test.tsx_Cmp_component_Fragment_button_q_e_click_veAZ2ow0cnM",
  "path": "",
  "extension": "js",
  "parent": "Cmp_component_4ryKJTOKjWE",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    394,
    428
  ],
  "paramNames": [
    "_",
    "_1",
    "currentType"
  ]
}
*/
== DIAGNOSTICS ==

[]
