packages/optimizer/core/src/snapshots/qwik_core__test__should_not_wrap_var_template_string.snap
---
source: packages/optimizer/core/src/test.rs
assertion_line: 4331
expression: output
---
==INPUT==


		import { component$, useComputed$ } from '@qwik.dev/core';
		import { inlineTranslate } from 'translate-lib';

		export default component$(() => {
			const t = inlineTranslate();

			const productTitle = useComputed$(() => {
				return 'Test title';
			});

			return (
				<img 
					attr={t('home.imageAlt.founded-product:')}
					alt={`${t('home.imageAlt.founded-product:')} ${productTitle.value}`} />
			);
		});
		
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_test_component_LUXeXe0DQrg = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg");
//
export default /*#__PURE__*/ componentQrl(q_test_component_LUXeXe0DQrg);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAIE,6BAAe,2CAYZ\"}")
============================= test.tsx_test_component_productTitle_useComputed_ZVQVUkxqtiQ.js (ENTRY POINT)==

export const test_component_productTitle_useComputed_ZVQVUkxqtiQ = ()=>{
    return 'Test title';
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"mEAOqC;IACjC,OAAO;AACR\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_productTitle_useComputed_ZVQVUkxqtiQ",
  "entry": null,
  "displayName": "test.tsx_test_component_productTitle_useComputed",
  "hash": "ZVQVUkxqtiQ",
  "canonicalFilename": "test.tsx_test_component_productTitle_useComputed_ZVQVUkxqtiQ",
  "path": "",
  "extension": "js",
  "parent": "test_component_LUXeXe0DQrg",
  "ctxKind": "function",
  "ctxName": "useComputed$",
  "captures": false,
  "loc": [
    221,
    258
  ]
}
*/
============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { inlineTranslate } from "translate-lib";
import { qrl } from "@qwik.dev/core";
import { useComputedQrl } from "@qwik.dev/core";
//
const q_test_component_productTitle_useComputed_ZVQVUkxqtiQ = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_productTitle_useComputed_ZVQVUkxqtiQ"), "test_component_productTitle_useComputed_ZVQVUkxqtiQ");
//
export const test_component_LUXeXe0DQrg = ()=>{
    const t = inlineTranslate();
    const productTitle = useComputedQrl(q_test_component_productTitle_useComputed_ZVQVUkxqtiQ);
    return /*#__PURE__*/ _jsxSorted("img", {
        alt: `${t('home.imageAlt.founded-product:')} ${productTitle.value}`,
        attr: t('home.imageAlt.founded-product:')
    }, null, null, 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;0CAI4B;IACzB,MAAM,IAAI;IAEV,MAAM,eAAe;IAIrB,qBACC,WAAC;QAEA,KAAK,GAAG,EAAE,kCAAkC,CAAC,EAAE,aAAa,KAAK,EAAE;QADnE,MAAM,EAAE;;AAGX\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    143,
    418
  ]
}
*/
== DIAGNOSTICS ==

[]
