packages/optimizer/core/src/snapshots/qwik_core__test__should_preserve_non_ident_explicit_captures.snap
---
source: packages/optimizer/core/src/test.rs
assertion_line: 7607
expression: output
---
==INPUT==


import { _capturesObj, inlinedQrl } from '@qwik.dev/core';

const left = 1;
const right = 2;

export const task = inlinedQrl(() => {
	const left = _capturesObj._[0];
	const middle = _capturesObj._[1];
	const right = _capturesObj._[2];
	return middle ? left : right;
}, 'task', [left, true, right]);

============================= test.tsx_task_task.tsx (ENTRY POINT)==

import { _capturesObj } from "@qwik.dev/core";
//
export const task = ()=>{
    const left = _capturesObj._[0];
    const middle = _capturesObj._[1];
    const right = _capturesObj._[2];
    return middle ? left : right;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;oBAM+B;IAC9B,MAAM,OAAO,aAAa,CAAC,CAAC,EAAE;IAC9B,MAAM,SAAS,aAAa,CAAC,CAAC,EAAE;IAChC,MAAM,QAAQ,aAAa,CAAC,CAAC,EAAE;IAC/B,OAAO,SAAS,OAAO;AACxB\"}")
/*
{
  "origin": "test.tsx",
  "name": "task",
  "entry": null,
  "displayName": "test.tsx_task",
  "hash": "task",
  "canonicalFilename": "test.tsx_task_task",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "task",
  "captures": true,
  "loc": [
    127,
    269
  ],
  "captureNames": [
    "left",
    "right"
  ]
}
*/
============================= test.tsx ==

import { qrlDEV } from "@qwik.dev/core";
//
const q_task = /*#__PURE__*/ qrlDEV(()=>import("./test.tsx_task_task"), "task", {
    file: "/user/qwik/src/test.tsx",
    lo: 127,
    hi: 269,
    displayName: "test.tsx_task"
});
//
const left = 1;
const right = 2;
export const task = q_task.w([
    left,
    true,
    right
]);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;;AAGA,MAAM,OAAO;AACb,MAAM,QAAQ;AAEd,OAAO,MAAM,gBAKF;IAAC;IAAM;IAAM;CAAM,EAAE\"}")
== DIAGNOSTICS ==

[]
